--- a/ahmed-brian/index.html
+++ b/ahmed-brian/index.html
@@ -8,12 +8,17 @@
   <!-- TODO: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
   <link rel="stylesheet" href="vendor/styles/normalize.css">
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
+  <link rel="stylesheet" href="vendor/styles/icons.css">
 
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
+  <link rel="stylesheet" href="vendor/styles/base/base.css">
+  <link rel="stylesheet" href="vendor/styles/layout/layout.css">
+  <link rel="stylesheet" href="vendor/styles/modules/modules.css">
+
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- PUT YOUR RESPONSE HERE -->
-
+  <!-- if base has a h1 of red and layout has h1 of green layout will override it since it comes after
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 </head>
