--- a/taylor_tama/index.html
+++ b/taylor_tama/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <title>Lab 1</title>
   <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- TODO: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
+  <link rel="stylesheet" href="styles/normalize.css">
 
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
+  <link rel="stylesheet" href="styles/icons.css">
 
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/modules.css">
+  <link rel="stylesheet" href="styles/layout.css">
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- PUT YOUR RESPONSE HERE -->
