--- a/ahmed-brian/index.html
+++ b/ahmed-brian/index.html
@@ -18,8 +18,9 @@
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- PUT YOUR RESPONSE HERE -->
-  <!-- if base has a h1 of red and layout has h1 of green layout will override it since it comes after
+ <!-- if base has a h1 of red and layout has h1 of green layout will override it since it comes after -->
   <!-- REVIEW: This is the favicon -->
+
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 </head>
 <body>
@@ -27,6 +28,8 @@
   <header class="site-header clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
     <!-- PUT YOUR RESPONSE HERE -->
+    <!-- when you float an object the next element does not take this object's height into account as to where it vertically displays on the page, clear: both; is a solution for this problem.
+    the best method would be to add the following css to the elements psuedo elamnt's after(  content: ""; display: table; clear: both;) -->
 
     <section class="heading-group-h1">
       <h1>
@@ -36,7 +39,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
-
+      <div class="icon-menu"></div>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
