--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,23 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Lab 1</title>
-  <!-- TOD: Add a meta tag to properly set the viewport and initial scale -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- TOD: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
-<link rel="stylesheet" href="vendor/styles/normalize.css">
-  <!-- TOD: Link in the provided styles/icons.css file so that you can use icon fonts -->
-<link rel="stylesheet" href="vendor/styles/icons.css">
-  <!-- TOD: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
-<link rel="stylesheet" href="css-styles/base.css">
-<link rel="stylesheet" href="css-styles/layout.css">
-<link rel="stylesheet" href="css-styles/module.css">
+  <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
+
+  <!-- TODO: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
+
+  <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
+
+  <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
+
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
-  <!-- First, we reset the stylesheet of the page. Then we load the 3rd party links to the page. Then we add the SMACSS layers as the final order. -->
+  <!-- PUT YOUR RESPONSE HERE -->
 
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 </head>
 <body>
+  
   <!-- REVIEW: Note that the header has multiple classes. This is a perfectly normal thing in HTML/CSS, even though we have not seen it very much so far. -->
   <header class="site-header clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
