--- a/ahmed-brian/index.html
+++ b/ahmed-brian/index.html
@@ -18,7 +18,7 @@
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- PUT YOUR RESPONSE HERE -->
- <!-- if base has a h1 of red and layout has h1 of green layout will override it since it comes after -->
+  <!-- If base has a h1 of red and layout has h1 of green layout will override it since it comes after. Any stylesheet you want overwritten you load first -->
   <!-- REVIEW: This is the favicon -->
 
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
