--- a/taylor_tama/index.html
+++ b/taylor_tama/index.html
@@ -14,11 +14,12 @@
 
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
   <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/modules.css">
   <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/modules.css">
+
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
-  <!-- PUT YOUR RESPONSE HERE -->
+  We begin with normalize because it is a reset stylesheet. We load our SMACCS in order so that we don't overwrite anything that we use in the latter stylesheets. The SMACCS stylesheets are loaded base to module because base contains basic elements, layout contains structural elements and modules contain modular elements.
 
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
@@ -37,7 +38,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
-
+        <img src = "vendor/styles/fonts/three.svg">
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
