--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/modules.css">
+  <link rel="stylesheet" href="vendor/web-fonts-with-css/css/fontawesome-all.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 </head>
 <body>
@@ -20,7 +21,7 @@
   <header class="site-header clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
     <!-- PUT YOUR RESPONSE HERE -->
-
+    <!-- Clear allows an element to float all the way left or all the way right so that it is not touching another element on either the left, right, or both sides. -->
     <section class="heading-group-h1">
       <h1>
         Kilovolt Blog!
@@ -29,7 +30,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
-
+      <i class="fa fa-bars" aria-hidden="true"></i>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
