--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>Lab 1</title>
   <!-- TODO: Add a meta tag to properly set the viewport and initial scale -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- TODO: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
-
+  <link rel="stylesheet" href="vendor/styles/normalize.css">
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
-
+  <link rel="stylesheet" href="vendor/styles/fonts">
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
