added hamburger menu

--- a/katyWyatt/index.html
+++ b/katyWyatt/index.html
@@ -43,6 +43,9 @@
         <li><a href="http://github.com/brookr" target="_blank" class="icon-github"> GitHub</a></li>
       </ul>
     </nav>
+    <p class="hamburger">
+      <img src="vendor/styles/fonts/hamburger.svg">
+    </p>
   </header>
   <main>
     <section id="articles" class="tab-content">
