moved the normalize file to the styles folder.  added style links and commits to html.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,9 +10,12 @@
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
   <link rel="stylesheet" href="vendor/styles/fonts">
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
+  <link rel="stylesheet" href="base/base.css">
+  <link rel="stylesheet" href="module/images">
+  <link rel="stylesheet" href="layout">
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
-  <!-- PUT YOUR RESPONSE HERE -->
+  <!-- the reset file loads first so that it doesnt affect the layout later.  Fonts come next to be available as needed. Base comes next to set up default styles.  Then the Modules which are specific features. -->
 
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
