added links to SMACSS files and commented on our file organization

--- a/christian-jasper/index.html
+++ b/christian-jasper/index.html
@@ -10,11 +10,17 @@
   <link rel="stylesheet" href="vendor/styles/normalize.css">
 
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
+  <link rel="stylesheet" href="vendor/styles/icons.css">
 
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
-
+  <link rel="stylesheet" href="base/base.css">
+  <link rel="stylesheet" href="layout/header.css">  
+  <link rel="stylesheet" href="layout/content.css">
+  <link rel="stylesheet" href="layout/footer.css">
+  <link rel="stylesheet" href="modules/hamburger.css">
+ 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
-  <!-- PUT YOUR RESPONSE HERE -->
+  <!--We created the above ordering because the webpage loads from top-to-bottom. We created BASE, LAYOUT and MODULES folders; and added files to each folder base on the SMACSS model-->
 
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
