--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,13 +6,13 @@
   <!-- DONE: Add a meta tag to properly set the viewport and initial scale -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- DONE: Add a link to a normalize.css file, which should be in your vendor/styles/ directory -->
-  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
   <!-- DONE: Link in the provided styles/icons.css file so that you can use icon fonts -->
-  <link rel="stylesheet" href="styles/icons.css">
+  <link rel="stylesheet" href="vendor/styles/icons.css">
   <!-- DONE: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/layout.css">
-  <link rel="stylesheet" href="styles/module.css">
+  <link rel="stylesheet" href="vendor/styles/base.css">
+  <link rel="stylesheet" href="vendor/styles/layout.css">
+  <link rel="stylesheet" href="vendor/styles/module.css">
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- We load the stylesheets in this way because of cascading order. What we want to load first we put from top to bottom. -->
 
@@ -33,8 +33,11 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
-      <span class="icon-menu"></span>
-
+    <div class="icon-menu">
+      <a href="#">
+        <span></span>
+      </a>
+    </div>
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
         <li class="tab" data-content="about"><a href="#" class="icon-address-book"> About</a></li>
@@ -95,5 +98,6 @@
     <!-- REVIEW: Note the use of &copy; below, and take a moment to look up how special characters are displayed in HTML if you are not familiar with them. -->
     &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
+  <script src="hamburger.js"></script>
 </body>
 </html>
