--- a/christian-jasper/index.html
+++ b/christian-jasper/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="modules/hamburger.css">
  
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
-  <!--We created the above ordering because the webpage loads from top-to-bottom. We created BASE, LAYOUT and MODULES folders; and added files to each folder base on the SMACSS model-->
+  <!--We created the above ordering because the webpage loads from top-to-bottom. We created BASE, LAYOUT and MODULES folders; and added files to each folder base on the SMACSS model::: test testing-->
 
   <!-- REVIEW: This is the favicon -->
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
