--- a/ahmed-brian/index.html
+++ b/ahmed-brian/index.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="vendor/styles/icons.css">
 
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
-  <link rel="stylesheet" href="vendor/styles/base/base.css">
-  <link rel="stylesheet" href="vendor/styles/layout/layout.css">
-  <link rel="stylesheet" href="vendor/styles/modules/modules.css">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/modules.css">
 
 
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
