more changes made

--- a/katyWyatt/index.html
+++ b/katyWyatt/index.html
@@ -11,9 +11,9 @@
   <!-- TODO: Link in the provided styles/icons.css file so that you can use icon fonts -->
   <link href="vendor/styles/icons.css" rel="stylesheet">
   <!-- TODO: Link in your SMACSS-appropriate CSS files: base, layout, and modules -->
-  <link href="base/base.css" rel="stylesheet">
-  <link href="layout/layout.css" rel="stylesheet">
-  <link href="module/module.css" rel="stylesheet">
+  <link href="vendor/styles/base.css" rel="stylesheet">
+  <link href="vendor/styles/layout.css" rel="stylesheet">
+  <link href="vendor/styles/module.css" rel="stylesheet">
   <!-- COMMENT: Explain the ordering of the loading of the stylesheets -->
   <!-- PUT YOUR RESPONSE HERE -->
   <!-- We want our stylesheets in this order becuase we want our webpage to create order within our file system which helps us as devs. This ordering also allows us to looks at specific pieces of code way easier instead of looking in one css file in order to change what we need to. 
