hover effect added to display nav menu below 640px

--- a/christian-jasper/index.html
+++ b/christian-jasper/index.html
@@ -29,7 +29,7 @@
   <!-- REVIEW: Note that the header has multiple classes. This is a perfectly normal thing in HTML/CSS, even though we have not seen it very much so far. -->
   <header class="site-header clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
-    <!-- PUT YOUR RESPONSE HERE -->
+    <!-- The clearfix is essentially a CSS hack which clears the children's float of their parent node. -->
 
     <section class="heading-group-h1">
       <h1>
@@ -39,6 +39,7 @@
     </section>
     <nav class="main-nav">
       <!-- TODO: Add a hamburger menu icon here, which will ultimately show/hide depending on screen width (desktop vs. mobile). -->
+      <p class="icon-menu"></p>
 
       <ul>
         <li class="tab" data-content="articles"><a href="#" class="icon-home"> Home</a></li>
