got a responsive layout, still trying to figure out the hover event

--- a/katyWyatt/index.html
+++ b/katyWyatt/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <!-- REVIEW: Note that the header has multiple classes. This is a perfectly normal thing in HTML/CSS, even though we have not seen it very much so far. -->
-  <header class="site-header clearfix">
+  <header class="site-header-clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
     <!-- PUT YOUR RESPONSE HERE -->
     <!-- Read from perishablepress.com, clearfix is known as the easy clearing hack because it is used to clear floated divs without using structural markup. It is effective in resolving layout issues without the need to mix structure and presentation.  -->
