--- a/christian-jasper/index.html
+++ b/christian-jasper/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <!-- REVIEW: Note that the header has multiple classes. This is a perfectly normal thing in HTML/CSS, even though we have not seen it very much so far. -->
-  <header class="site-header clearfix">
+  <header class="site-header-clearfix">
     <!-- COMMENT: Read the CSS Tricks article on clearfix, and explain in your own words how they are used. -->
     <!-- The clearfix is essentially a CSS hack which clears the children's float of their parent node. -->
 
